[gd_scene load_steps=2 format=3 uid="uid://blv70ewr4df42"]

[ext_resource type="Script" uid="uid://dwvh26w57a4lk" path="res://Scripts/UI/skill_selection_panel.gd" id="1_78yhn"]

[node name="SkillSelectionPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -896.0
offset_bottom = -392.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_78yhn")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Skill Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.42

[node name="Description" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
bbcode_enabled = true
text = "Plz select a skill.
"
fit_content = true
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Release" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "select"

[node name="Cancel" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "cancel"

[connection signal="item_clicked" from="PanelContainer/MarginContainer/VBoxContainer/SkillList" to="." method="_on_skill_list_item_clicked"]
